Auto redirect to Riverside@google for job finding use, 10 May,2021

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html lang="en" dir="ltr">
 <head>
   <title>Riverside</title>
+	<meta http-equiv='refresh' content='0; URL=https://sites.google.com/view/riverside-intro/about-river/english'/>
   <meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
 	<meta name="author" content="Li Riviere"/>
@@ -14,6 +15,9 @@
 	<link rel="apple-touch-icon" href="favicon.png">
 	<link rel="stylesheet" href="source/css/main.css" media="screen and (min-width:1024px)"/>
   <link rel="stylesheet" href="assets/css/main.css"/>
+	<!-- <script>
+		window.location.href='https://sites.google.com/view/riverside-intro/about-river/english';
+	</script> -->
 </head>
 <body class="is-preload">
 
